Fixed paragraph spacing site-wide

--- a/custom_theme/css/fixes.css
+++ b/custom_theme/css/fixes.css
@@ -152,3 +152,9 @@ pre code
 	{
     white-space: pre;
 	}
+
+p
+	{
+	margin-top: 1em;
+	margin-bottom: 1em;
+	}
